[package]
name = "chip8"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
sdl2 = "0.33.0"
gl = "0.14.0"
imgui = "0.2.0"
imgui-sdl2 = "0.8.0"
imgui-opengl-renderer = "0.6.1"
log = "0.4.8"
pretty_env_logger = "0.4.0"
structopt = "0.3.9"
