[package]
name = "chip8_frontend_sdl"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8 = { path = "../" }
sdl2 = "0.33.0"
gl = "0.14.0"
imgui = "0.2.0"
imgui-sdl2 = "0.8.0"
imgui-opengl-renderer = "0.6.1"
log = "0.4.8"
env_logger = "0.7.1"
structopt = "0.2"
lazy_static = "1.4.0"

[dependencies.imgui_very_quick]
git = "https://github.com/germangb/imgui_very_quick.git"
